PH and I are friends now

--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -41,6 +41,7 @@
 \newcommand{\br}[2]{\left\{#1,#2\right\}}
 %\newcommand{\pro}[2]{$\left\{#1,#2\right\}$}
 \newcommand{\pro}[2]{$#1,#2-$}
+\newcommand{\bd}[2]{\left(#1,#2\right)}
 
 % Vectors
 \newcommand{\vr}{\mathbf{r}}
