--- a/thesis.tex
+++ b/thesis.tex
@@ -206,7 +206,7 @@
 %\include{text/introduction}
 %\include{text/theory}
 %\include{text/methods}
-%\include{text/bilayers}
+\include{text/bilayers}
 %\include{text/targeted_opt}
 %\include{text/general_networks}
 %\include{text/quasi2d}
